build: change build type

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
         run: |
           New-Item -ItemType directory -Path build
           cmake -S . -B build
-          cmake --build build/ --config Release -j
+          cmake --build build/ --config Debug -j
           cmake --build build/ --config RelWithDebInfo -j
 
       - name: Upload build files
@@ -32,4 +32,4 @@ jobs:
           name: artifact
           path: |
             ./build/Debug
-            ./build/Release
+            ./build/RelWithDebInfo
