--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,14 @@ set(CMAKE_C_STANDARD 11)
 set(CMAKE_BUILD_TYPE Debug)
 
 file(GLOB_RECURSE SRC_FILES_DIR
-    ${PROJECT_SOURCE_DIR}/src/*.c
+    ${PROJECT_SOURCE_DIR}/src/file_utils.c
+    ${PROJECT_SOURCE_DIR}/src/hashmap.c
+    ${PROJECT_SOURCE_DIR}/src/lightbase.c
+    ${PROJECT_SOURCE_DIR}/src/loader.c
+)
+
+file(GLOB_RECURSE HIJACK_SRC_FILES_DIR
+    ${PROJECT_SOURCE_DIR}/src/hijack/hijack.c
 )
 
 include_directories(
@@ -41,10 +48,19 @@ add_link_options(
 
 add_library(lightbase SHARED ${SRC_FILES_DIR})
 
+add_library(hijack SHARED ${HIJACK_SRC_FILES_DIR})
+
 set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /NODEFAULTLIB:MSVCRTD")
 
 set_target_properties(lightbase PROPERTIES OUTPUT_NAME "lightbase")
 
+set_target_properties(hijack PROPERTIES OUTPUT_NAME "winhttp")
+
 target_link_libraries(lightbase 
 	"${CMAKE_SOURCE_DIR}/lib/minhook.x64.lib"
+)
+
+target_link_libraries(hijack
+	debug "MSVCRTD.lib"
+    optimized "MSVCRT.lib"
 )
