update: fmt doc

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.21)
+cmake_minimum_required(VERSION 3.6)
 
 project(lightbase)
 
@@ -20,7 +20,12 @@ add_subdirectory(dep/funchook)
 
 include_directories(include)
 
-set(LIGHTBASE_SOURCE src/linux/lightbase.c src/linux/hook.c src/linux/symbol.c src/linux/cache.c)
+set(LIGHTBASE_SOURCE
+    src/linux/lightbase/lightbase.c
+    src/linux/lightbase/hook.c
+    src/linux/lightbase/symbol.c
+    src/linux/lightbase/cache.c
+)
 
 add_library(lightbase SHARED ${LIGHTBASE_SOURCE})
 
@@ -62,6 +67,7 @@ add_compile_options(
     /sdl
     /utf-8
     /Zi
+    # /O2
 )
 
 add_link_options(
@@ -73,17 +79,18 @@ set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /NODEFAULTLIB:MSVCRT
 
 # lightbase main
 file(GLOB_RECURSE SRC_FILES_DIR
-    ${PROJECT_SOURCE_DIR}/src/win/file_utils.c
-    ${PROJECT_SOURCE_DIR}/src/win/hashmap.c
-    ${PROJECT_SOURCE_DIR}/src/win/lightbase.c
-    ${PROJECT_SOURCE_DIR}/src/win/loader.c
+    # ${PROJECT_SOURCE_DIR}/src/win/lightbase/file_utils.c
+    # ${PROJECT_SOURCE_DIR}/src/win/lightbase/hashmap.c
+    # ${PROJECT_SOURCE_DIR}/src/win/lightbase/loader.c
+    ${PROJECT_SOURCE_DIR}/src/win/lightbase/lightbase.c
+    ${PROJECT_SOURCE_DIR}/src/win/lightbase/hook.c
+    ${PROJECT_SOURCE_DIR}/src/win/lightbase/symbol.c
+    ${PROJECT_SOURCE_DIR}/src/win/lightbase/cache.c
 )
 
 add_library(lightbase SHARED ${SRC_FILES_DIR})
-
 set_target_properties(lightbase PROPERTIES OUTPUT_NAME "lightbase")
-
-
+target_link_libraries(lightbase "${CMAKE_SOURCE_DIR}/lib/minhook.x64.lib")
 
 # hijack for win
 file(GLOB_RECURSE HIJACK_SRC_FILES_DIR
@@ -94,13 +101,15 @@ add_library(hijack SHARED ${HIJACK_SRC_FILES_DIR})
 
 set_target_properties(hijack PROPERTIES OUTPUT_NAME "winhttp")
 
-target_link_libraries(lightbase 
-	"${CMAKE_SOURCE_DIR}/lib/minhook.x64.lib"
-)
-
 target_link_libraries(hijack
 	debug "MSVCRTD.lib"
     optimized "MSVCRT.lib"
 )
+
+# test: pdb symbol read for win
+# add_executable(pdb_symbol_read tests/win/symbol_read/symbol_read.c src/win/lightbase/symbol.c src/win/lightbase/cache.c)
+# add_compile_options("/MD")
+
+# add_executable(a a.c)
 
 ENDIF (CMAKE_SYSTEM_NAME MATCHES "Windows")
