--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,18 +20,17 @@ add_subdirectory(deps/funchook)
 
 include_directories(include)
 
-add_compile_options(-Wall)
-
 set(LIGHTBASE_SOURCE
-    src/linux/lightbase/lightbase.c
-    src/linux/lightbase/hook.c
     src/linux/lightbase/symbol.c
-    src/linux/lightbase/cache.c
+    src/linux/lightbase/hook.c
+    src/linux/lightbase/lightbase.c
 )
 
 add_library(lightbase SHARED ${LIGHTBASE_SOURCE})
-
 target_link_libraries(lightbase funchook-static dl)
+target_compile_definitions(lightbase PRIVATE HASH_FUNCTION=HASH_SFH)
+target_compile_options(lightbase PRIVATE -Wall -O2)
+
 # target_compile_definitions(lightbase PRIVATE)
 # target_include_directories(lightbase PUBLIC include)
 
@@ -81,13 +80,9 @@ set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /NODEFAULTLIB:MSVCRT
 
 # lightbase main
 file(GLOB_RECURSE SRC_FILES_DIR
-    # ${PROJECT_SOURCE_DIR}/src/win/lightbase/file_utils.c
-    # ${PROJECT_SOURCE_DIR}/src/win/lightbase/hashmap.c
-    # ${PROJECT_SOURCE_DIR}/src/win/lightbase/loader.c
-    ${PROJECT_SOURCE_DIR}/src/win/lightbase/lightbase.c
-    ${PROJECT_SOURCE_DIR}/src/win/lightbase/hook.c
     ${PROJECT_SOURCE_DIR}/src/win/lightbase/symbol.c
-    ${PROJECT_SOURCE_DIR}/src/win/lightbase/cache.c
+    ${PROJECT_SOURCE_DIR}/src/win/lightbase/hook.c
+    ${PROJECT_SOURCE_DIR}/src/win/lightbase/lightbase.c
 )
 
 add_library(lightbase SHARED ${SRC_FILES_DIR})
